--- a/magee.html
+++ b/magee.html
@@ -161,6 +161,7 @@
       document.getElementById('tumor').value = 2.5;
       document.getElementById('ki67').value = 15;
     }
-  </script>
+  document.getElementById('result').innerText = 'Magee result here';
+</script>
 </body>
 </html>
