--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
   </style>
 </head>
 <body>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="magee.html">Magee</a>
+  <a href="hscore.html">H-Score</a>
+  <a href="npi.html">NPI</a>
+  <a href="pepi.html">PEPI</a>
+</nav>
+
   <div class="container">
     <h1>Breast Cancer Calculator</h1>
     <p class="intro">A one-stop platform for evidence-based, pathology-informed breast cancer decision support tools, designed to empower patients and professionals alike.</p>
@@ -90,4 +99,4 @@
     </footer>
   </div>
 </body>
-</html>
+</html><div class="result" id="result"></div>
