--- a/magee.html
+++ b/magee.html
@@ -145,7 +145,7 @@
       };
 
       document.getElementById('result').innerText =
-        `Magee Equation 1:<a href='https://pubmed.ncbi.nlm.nih.gov/' target='_blank' style='color:#007bff; font-weight: normal; margin-left: 8px;'>Learn more</a> ${me1.toFixed(2)}\n→ ${interpret(me1)}\n\n` +
+        `Magee Equation 1: ${me1.toFixed(2)}\n→ ${interpret(me1)}\n\n` +
         `Magee Equation 2: ${me2.toFixed(2)}\n→ ${interpret(me2)}\n\n` +
         `Magee Equation 3: ${me3.toFixed(2)}\n→ ${interpret(me3)}`;
 
