--- a/hscore.html
+++ b/hscore.html
@@ -40,6 +40,18 @@
       margin-top: 20px;
       font-weight: bold;
     }
+    nav {
+  background-color: #fff;
+  padding: 10px;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+nav a {
+  margin: 0 15px;
+  text-decoration: none;
+  color: #007bff;
+  font-weight: bold;
+    }
   </style>
 </head>
 <body>
