--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
       font-size: 0.9em;
       color: #666;
     }
+    nav {
+      background-color: #fff;
+      padding: 10px;
+      text-align: center;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      margin: 0;
+    }
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #007bff;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
