--- a/magee.html
+++ b/magee.html
@@ -16,17 +16,11 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary mb-4">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Breast Cancer Calculators</a>
-            <div class="navbar-nav">
-                <a class="nav-link" href="magee.html">Magee</a>
-                <a class="nav-link" href="hscore.html">H-Score</a>
-                <a class="nav-link" href="npi.html">NPI</a>
-                <a class="nav-link" href="pepi.html">PEPI</a>
-            </div>
-        </div>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-4">
+    <div class="container-fluid">
+        <a class="navbar-brand fw-bold" href="index.html">Home</a>
+    </div>
+</nav>
 
     <div class="calculator-container">
         <h2>Magee Equations Calculator</h2>
